--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     .mailer {
-      max-width: 700px;
+      max-width: 700px; 
       background: #ffffff;
       border-radius: 12px;
       overflow: hidden;
@@ -239,8 +239,8 @@
         </table>
       </div>
 <p>Have questions or need assistance? Our dedicated crypto support team is available around the clock to help you navigate your Bitcoin journey.</p>
-      <a href="tel:+18555744604" class="cta-button">Call Now</a>
-      <p class="support">For immediate assistance, contact us at <a href="tel:+18555744604">+1-(855)-574-4604</a></p>
+      <a href="tel:+1-805-292-4499" class="cta-button">Call Now</a>
+      <p class="support">For immediate assistance, contact us at <a href="tel:+1-805-292-4499">+1-805-(292)-4499</a></p>
    </div>
       <!-- Footer -->
     <div class="footer">
